<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity$PlaceholderFragment">

        <TextView
            style="@style/DefaultTextViewStyle"
            android:text="@string/age"/>

        <Spinner
            android:id="@+id/age"
            style="@style/DefaultSpinnerStyle"
            android:entries="@array/age_array"/>

        <TextView
            style="@style/DefaultTextViewStyle"
            android:text="@string/gender"/>

        <Spinner
            android:id="@+id/gender"
            style="@style/DefaultSpinnerStyle"
            android:entries="@array/gender_array"/>

        <TextView
            style="@style/DefaultTextViewStyle"
            android:text="@string/stage_of_education"/>

        <Spinner
            android:id="@+id/stage_of_education"
            style="@style/DefaultSpinnerStyle"
            android:entries="@array/stage_of_education_array"/>

        <TextView
            style="@style/DefaultTextViewStyle"
            android:text="@string/work_status"/>

        <Spinner
            android:id="@+id/work_status"
            style="@style/DefaultSpinnerStyle"
            android:entries="@array/work_status_array"/>

        <TextView
            style="@style/DefaultTextViewStyle"
            android:text="@string/absence_reason"/>

        <Spinner
            android:id="@+id/absence_reason"
            style="@style/DefaultSpinnerStyle"
            android:entries="@array/absence_reason_array"/>

        <Button
            android:id="@+id/send_user_info"
            style="@style/SendButtonStyle"/>

        <TextView
            style="@style/DefaultTextViewStyle"
            android:text="@string/workshop_rating"/>

        <Spinner
            android:id="@+id/workshop_rating"
            style="@style/DefaultSpinnerStyle"
            android:entries="@array/workshop_rating_array"/>

        <Button
            android:id="@+id/send_workshop_rating"
            style="@style/SendButtonStyle"/>

    </LinearLayout>

</ScrollView>
